--- a/index.html
+++ b/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rexburg Adventures</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>My client project for Mr. Stephenson.</h1>
-    <h2>A change has been made.</h2>
+
+    <!-- HEADER -->
+    <header>
+        <a href="#" class="logo">R</a>
+        <h1>Rexburg Adventures</h1>
+    </header>
+
+    <!-- PURPOSE SECTION -->
+    <section class="purpose">
+        <p>My idea was to create a website called Rexburg Adventures, designed specifically for college students looking for fun things to do in and around Rexburg. The goal is to make it easier for students to find affordable, exciting activities without having to spend hours searching or relying on word of mouth.
+The site includes categories like outdoor adventures, local events, date ideas, free activities, restaurant guides, and student discounts. It will also feature user reviews, maps, photos, and a weekly “Top Picks” list for quick inspiration.
+What makes Rexburg Adventures unique is that it’s made by and for college students—it understands the local lifestyle, budget, and need for spontaneous fun. It’s not just a list of places; it’s a community-driven hub that helps students make the most of their college experience in Rexburg.
+</p>
+    </section>
+
+    <!-- PICK OF THE WEEK -->
+    <section class="pick-of-week">
+        <h2>Pick of the Week</h2>
+        <div class="pow-container">
+            <img src="Picture1.jpg" alt="Pick of the week image">
+            <p>Description of this week's featured activity.</p>
+        </div>
+    </section>
+
+    <!-- ACTIVITIES LIST -->
+    <section class="activities">
+        <h2>More Activities</h2>
+
+        <div class="activity">
+            <img src="Picture2.jpg" alt="Activity image">
+            <p>Activity description goes here.</p>
+        </div>
+
+        <div class="activity">
+            <img src="Picture3.jpg" alt="Activity image">
+            <p>Activity description goes here.</p>
+        </div>
+
+        <div class="activity">
+            <img src="Picture4.jpg" alt="Activity image">
+            <p>Activity description goes here.</p>
+        </div>
+
+        <div class="activity">
+            <img src="Picture5.jpg" alt="Activity image">
+            <p>Activity description goes here.</p>
+        </div>
+
+        <div class="activity">
+            <img src="Picture6.jpg" alt="Activity image">
+            <p>Activity description goes here.</p>
+        </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        <p>© 2025 Rexburg Adventures</p>
+        <nav>
+            <a href="aboutme.html">About Me</a>
+            <a href="feedback.html">Feedback</a>
+        </nav>
+    </footer>
+
 </body>
 </html>
