--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- HEADER -->
     <header>
-        <a href="#" class="logo">R</a>
+        <a href="#" class="logo"><img src="..images/logo.png" alt="Logo"></a>
         <h1>Rexburg Adventures</h1>
     </header>
 
@@ -26,7 +26,7 @@ What makes Rexburg Adventures unique is that it’s made by and for college stud
     <section class="pick-of-week">
         <h2>Pick of the Week</h2>
         <div class="pow-container">
-            <img src="Picture1.jpg" alt="Pick of the week image">
+            <img src="..images/Picture1.jpg" alt="Pick of the week image">
             <p>Description of this week's featured activity.</p>
         </div>
     </section>
@@ -36,27 +36,27 @@ What makes Rexburg Adventures unique is that it’s made by and for college stud
         <h2>More Activities</h2>
 
         <div class="activity">
-            <img src="Picture2.jpg" alt="Activity image">
+            <img src="..images/Picture2.jpg" alt="Activity image">
             <p>Activity description goes here.</p>
         </div>
 
         <div class="activity">
-            <img src="Picture3.jpg" alt="Activity image">
+            <img src="..images/Picture3.jpg" alt="Activity image">
             <p>Activity description goes here.</p>
         </div>
 
         <div class="activity">
-            <img src="Picture4.jpg" alt="Activity image">
+            <img src="..images/Picture4.jpg" alt="Activity image">
             <p>Activity description goes here.</p>
         </div>
 
         <div class="activity">
-            <img src="Picture5.jpg" alt="Activity image">
+            <img src="..images/Picture5.jpg" alt="Activity image">
             <p>Activity description goes here.</p>
         </div>
 
         <div class="activity">
-            <img src="Picture6.jpg" alt="Activity image">
+            <img src="..images/Picture6.jpg" alt="Activity image">
             <p>Activity description goes here.</p>
         </div>
     </section>
