Added Descriptions to Activities

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ What makes Rexburg Adventures unique is that it’s made by and for college stud
         <h2>Pick of the Week</h2>
         <div class="pow-container">
             <img src="images/Picture1.jpg" alt="Pick of the week image">
-            <p>Description of this week's featured activity.</p>
+            <p>On campus at BYU-Idaho there are many fun things to do! Check out their <a href="https://www.byui.edu/student-guide/student-activities" target="_blank">Website</a> to see what fun things they have to offer this week!</p>
         </div>
     </section>
 
@@ -36,28 +36,28 @@ What makes Rexburg Adventures unique is that it’s made by and for college stud
         <h2>More Activities</h2>
 
         <div class="activity">
-            <img src="images/Picture2.jpg" alt="Activity image">
-            <p>Activity description goes here.</p>
+            <img src="images/Picture2.jpg" alt="frisbee image image">
+            <p>The Rexburg Nature Park, located less than 2 miles from BYU-I campus, has an amazing 10-hole frisbee golf course open to the public! Just bring your own discs or rent them from the Outdoor Rec Center and play for free!</p>
         </div>
 
         <div class="activity">
-            <img src="images/Picture3.jpg" alt="Activity image">
-            <p>Activity description goes here.</p>
+            <img src="images/Picture3.jpg" alt="trampoline image">
+            <p>Gravity Factory trampoline park is one of Rexburg’s greatest hubs due to its usability for all ages! Attractions include a large trampoline arena, a ninja warrior course, a foam pit, and dodgeball!</p>
         </div>
 
         <div class="activity">
-            <img src="images/Picture4.jpg" alt="Activity image">
-            <p>Activity description goes here.</p>
+            <img src="images/Picture4.jpg" alt="ice cave image">
+            <p>The St. Anthony Ice Caves, located about 35 miles outside of Rexburg, are an awesome way to spend a day out in nature. It’s a short hike, followed by some crawling and sliding around inside on the huge sheets of ice!</p>
         </div>
 
         <div class="activity">
-            <img src="images/Picture5.jpg" alt="Activity image">
-            <p>Activity description goes here.</p>
+            <img src="images/Picture5.jpg" alt="country dancing image">
+            <p>Roots and Boots offers Country Dancing Wednesday-Saturday from 8pm till Midnight. Price of entry is about $6 but varies with form of payment. Get your boots and cowboy hats on for a night of fun dancing either inside or under the stars!</p>
         </div>
 
         <div class="activity">
-            <img src="images/Picture6.jpg" alt="Activity image">
-            <p>Activity description goes here.</p>
+            <img src="images/Picture6.jpg" alt="rock climb image">
+            <p>The Rock Gym is an indoor rock-climbing facility that is equipped with harnesses, weights, bouldering, and training areas. Grab a group of friends and climb away! Fear of heights: Not recommended. </p>
         </div>
     </section>
 
