--- a/feedback.html
+++ b/feedback.html
@@ -11,10 +11,14 @@
     <header>
         <a href="index.html" class="logo"><img src="images/logo.jpg" alt="Logo"></a>
         <h1>Rexburg Adventures</h1>
-        <h3>We love to hear from you</h3>
     </header>
 
-    <div class="form-box">
+    <section > 
+        <p id="p3">We'd love to hear from you</p>
+    </section>
+    
+
+    <div class="form-box1">
         <section>
             <form action="#" method="post" id="feedback-form1">
                 <h2>Feedback Form</h2>
@@ -45,11 +49,11 @@
 
     <br><br>
 
-    <div class="form-box">
+    <div class="form-box2">
         <section>
             <form action="#" method="post" id="feedback-form2">
-                <p>On the scale 1-10, how useful would you say this site for you?</p>
-                <p>Please provide any comments and suggestion below:</p>
+                <p id="p1">On the scale 1-10, how useful would you say this site for you?</p>
+                <p id="p2">Please provide any comments and suggestion below:</p>
 
                 <label for="rating">Rating:</label>
                 <select id="rating" name="rating">
